# clickrtraining-android

./: .gitignore  Cargo.toml  Dockerfile  build.gradle  docker-compose.yml  local.properties  settings.gradle  shell.nix
app/src/androidTest/java/dev/chocobo/clickertraining/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/chocobo/clickertraining/: WebSocketService.kt
app/src/main/java/dev/chocobo/clickertraining/ui/theme/: Color.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_notification.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: client.rs  host.rs  main.rs
src/main/java/dev/chocobo/clickertraining/: MainActivity.kt  WebSocketService.kt
src/main/java/dev/chocobo/clickertraining/ui/theme/: Theme.kt  Type.kt
src/main/res/drawable/: button_background.xml  edittext_background.xml
src/main/res/layout/: activity_main.xml
src/main/res/values/: colors.xml  strings.xml  themes.xml
src/test/java/dev/chocobo/clickertraining/: ExampleUnitTest.kt
static/: index.css  index.html  index.js
