[package]
name = "clickrtraining"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
actix-files = "0.6.6"
actix-web = "4.10.2"
actix-ws = "0.3.0"
anyhow = "1.0.97"
awc = "3.6.0"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
multimap = "0.10.0"
once_cell = "1.21.3"
rodio = "0.20.1"
tokio = "1.44.1"
