[package]
name = "clickrtraining"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
awc = { version = "3.6.0", features = ["openssl"] }
actix-files = "0.6.6"
actix-web = "4.10.2"
actix-ws = "0.3.0"
anyhow = "1.0.97"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
once_cell = "1.21.3"
rodio = "0.20.1"
tokio = "1.44.1"
url-builder = "0.1.1"
random_word = { version = "0.5.0", features = ["en"] }
rand = "0.9.0"
shellexpand = "3.1.0"
